# degen-fund-bot

./: .env.example  Cargo.toml  README.md
src/: main.rs
